fix feedback dashboard layout issue in ie7
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@107126 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/modules/ext.moodBar.dashboard/ext.moodBar.dashboard.css
+++ b/modules/ext.moodBar.dashboard/ext.moodBar.dashboard.css
@@ -289,6 +289,7 @@
 	font-size: 1.2em;
 	margin: 0;
 	padding: 0;
+	display:inline; /* ie7 fix */
 }
 
 .fbd-item-userLinks{
@@ -298,6 +299,7 @@
 .fbd-item-time {
 	font-size: 1.2em;
 	float: right;
+	display:inline; /* ie7 fix */
 }
 
 .fbd-item-message {
